Add docs for secret, upstream
Related to #6
